<resources>
    <string name="app_name">CameraApp</string>
    <string name="action_settings">Settings</string>
    <string name="button_camera">Camera</string>
    <string name="image_cd_camera">Description of camera content</string>
    <string name="some_text">Some text</string>
    <string name="button_video">Live video</string>
    <string name="video_cd_camera">Video description</string>
    <string name="liveCamera">Live camera</string>
    <string name="fancyCamera">Run fancy cam</string>
    <string name="take_photo">Take a photo</string>
    <string name="blobDetection">run blob detection</string>
    <string name="back">back</string>
    <string name="pick_color">pick_color</string>
    <string name="select_photo_from_gallery">Select photo from gallery</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="color_picker">Wzornik kolorów</string>
    <string name="AddWallLive">AdWallLive</string>
    <string name="used_colors">Użyte kolory</string>
    <string name="calculator_description">Calculation based on one coat only. Two coats generally recommended. Additional coats may be required dependent on surface porosity and depth of colour.</string>


    <!-- Sliding Menu items -->
    <string-array name="nav_drawer_items">
        <item>Wzornik kolorów</item>
        <item>Katalog produktów</item>
        <item>Znajdź sklep</item>
        <item>Podpowiedź kolorów</item>
        <item>Kalkulator zużycia farby</item>
    </string-array>

    <!-- Sliding Menu item icons -->
    <array name="nav_drawer_icons">
        <item>@drawable/painter14_menu</item>
        <item>@drawable/gear39_menu</item>
        <item>@drawable/map_pointer2_menu</item>
        <item>@drawable/pipette2_menu</item>
        <item>@drawable/calculator69_menu</item>
    </array>

    <string-array name="colors_group_titles">
        <item>Barwy natury</item>
        <item>Kuchnia Łazienka</item>
        <item>Śnieżka satynowa</item>
    </string-array>

    <string-array name="spinner_ext_or_int">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string-array name="spinner_type_of_surface">

        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string-array name="spinner_paint_type">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>

    </string-array>
</resources>
