<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/back57"
        android:title="@string/back" />

    <ImageButton
        android:id="@+id/pick_photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_toRightOf="@+id/back"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/photography111"
        android:text="@string/select_photo_from_gallery" />

    <ImageButton
        android:id="@+id/pick_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="right"
        android:layout_toRightOf="@+id/pick_photo_button"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/painter14"
        android:title="@string/pick_color" />
</LinearLayout>
